# ticktime

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  flake.nix  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: desktop-build.yml
desktop/: README.md  build-server.mjs  pkg.config.json  platform-map.mjs
desktop/scripts/: smoke-sidecar.mjs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/frontend/: index.html
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: db_path.rs  http_probe.rs  main.rs
scripts/: demo-seed.ts  import-csv.ts
src/: app.css  app.html  hooks.server.test.ts  hooks.server.ts
src/lib/: copyTemplates.test.ts  copyTemplates.ts  csrf.test.ts  csrf.ts  duration.test.ts  duration.ts  enhanceWithAlert.ts  statusColor.test.ts  statusColor.ts  template.test.ts  template.ts  url.test.ts  url.ts  workdate.test.ts  workdate.ts
src/lib/components/: CopyButtons.svelte  Timer.svelte
src/lib/server/: authGuard.test.ts  authGuard.ts  formUrl.test.ts  formUrl.ts  health.test.ts  health.ts  jira.ts  reportUrl.test.ts  reportUrl.ts
src/lib/server/db/: index.ts  migrations.test.ts  migrations.ts
src/lib/server/repo/: tickets.ts  (+4 more)
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/close/: +page.server.ts  +page.svelte
src/routes/history/: +page.server.ts  +page.svelte
src/routes/settings/: +page.server.ts  +page.svelte
src/routes/tickets/: +page.server.ts  +page.svelte
(+4 files in other folders)
