[package]
name = "ticktime-desktop"
version = "0.1.0"
description = "ticktime デスクトップシェル (PoC)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# 単独クレート（ルートにワークスペースは無いが明示しておく）
[workspace]
